deployment_yamls/deployment.yaml
##################################################################################################
# Playground
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: playground
  labels:
    app: playground
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: playground
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: playground-v1
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: playground
        version: v1
    spec: 
      serviceAccount: meshery
      containers: 
        - env: 
          # - name: TWITTER_APP_HOST
          #   value: "http://auth.layer5.io"
          - name: BYPASS_AUTH
            value: "true"
          - name: FORTIO_URL
            value: "http://fortio:8080/fortio/"
          - name: PRODUCT_PAGE_URL
            value: "http://productpage:9080/productpage"
          - name: EVENT
            value: "istioPlay01"
          image: layer5/meshery
          imagePullPolicy: Always
          name: playground
          ports: 
            - containerPort: 8080
---
##################################################################################################
# fortio
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: fortio
  labels:
    app: fortio
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fortio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: fortio-v1
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: fortio
        version: v1
    spec: 
      containers: 
        - image: fortio/fortio
          imagePullPolicy: IfNotPresent
          name: fortio
          ports: 
            - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: playground-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: playground
spec:
  hosts:
  - "*"
  gateways:
  - playground-gateway
  http:
  - match:
    - uri:
        prefix: /play
    route:
    - destination:
        host: playground
        port:
          number: 8080
---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: productpage-auth
# spec:
#   hosts:
#   - auth.layer5.io
#   location: MESH_EXTERNAL
#   ports:
#   - name: http
#     number: 80
#     protocol: HTTP
#   resolution: DNS
